@startuml

title __MODEL's Class Diagram__\n

  namespace TreeDecorator {
    namespace model {
      interface model.ChristmasTree {
          {abstract} + draw()
      }
    }
  }
  

  namespace TreeDecorator {
    namespace model {
      class model.ChristmasTreeImpl {
          + draw()
      }
    }
  }
  

  namespace TreeDecorator {
    namespace odel {
      class model.Light {
          + circle : Circle[]
          + Light()
          + draw()
          - drawLight()
      }
    }
  }
  

  namespace TreeDecorator {
    namespace odel {
      class model.Presents {
          + Presents()
          + draw()
          - drawwithPresents()
      }
    }
  }
  

  namespace TreeDecorator {
    namespace odel {
      class model.Snowman {
          + circle : Circle[]
          + Snowman()
          + draw()
          - DrawSnow()
      }
    }
  }
  

  namespace TreeDecorator {
    namespace odel {
      class model.Star {
          + Star()
          + draw()
          - drawStar()
      }
    }
  }
  

  namespace TreeDecorator {
    namespace odel {
      class model.TreeDecorator {
          + TreeDecorator()
          + draw()
      }
    }
  }
  

  model.ChristmasTreeImpl .up.|> model.ChristmasTree
  model.Light -up-|> model.TreeDecorator
  model.Presents -up-|> model.TreeDecorator
  model.Snowman -up-|> model.TreeDecorator
  model.Star -up-|> model.TreeDecorator
  model.TreeDecorator .up.|> model.ChristmasTree
  model.TreeDecorator o-- model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
